--- a/cog.yaml
+++ b/cog.yaml
@@ -62,7 +62,7 @@ build:
     # comfyui_segment_anything
     - timm
 
-    # comfyui_controlnet_aux
+    - comfyui_controlnet_aux
     # https://github.com/Fannovel16/comfyui_controlnet_aux/blob/main/requirements.txt
     - importlib_metadata
     - opencv-python-headless>=4.0.1.24
