--- a/cog.yaml
+++ b/cog.yaml
@@ -62,8 +62,8 @@ build:
     # comfyui_segment_anything
     - timm
 
+    # comfyui_controlnet_aux
     # https://github.com/Fannovel16/comfyui_controlnet_aux/blob/main/requirements.txt
-    - comfyui_controlnet_aux
     - importlib_metadata
     - opencv-python-headless>=4.0.1.24
     - filelock
